# DE_Project_Group

./: .dockerignore  .gitignore  README.md  cloudbuild.yaml  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: linting.yaml
docs/sprint-01/: sprint-goal.md
docs/sprint-02/: goals.md
docs/sprint-03/: goals.md
docs/sprint-04/: goals.md
docs/uv/: uv-workflow.md
fetchers/nasa_api/: Dockerfile  README.md  cloudbuild.yaml  nasa_api.py  pyproject.toml  requirements.txt
fetchers/nasa_pipeline/: Dockerfile  nasa_api.py  pyproject.toml
fetchers/reddit_api/: README.md  cloudbuild.yaml  dockerfile  pyproject.toml  reddit_api.py  requirements.txt
fetchers/twitter_api/: .gitignore  README.md  cloudbuild.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  twitter_api.py
fetchers/twitter_api/hist_data/: tweet_counts_20250901_111937.csv
frontend/: README.md  app.py  pyproject.toml  requirements.txt  secret.json  streamlit_app.py
frontend/.streamlit/: config.toml  secrets.toml
frontend/flask_app/: README.md  main.py  pyproject.toml
frontend/johntend/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
models/c_models/: README.md  pyproject.bak
models/c_models/data_loader/: README.md  data_loader.py  pyproject.toml
models/c_models/inference/: Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
models/c_models/model1/: main.py  pyproject.toml
models/c_models/model1/trained_models/: model_20250929_100453.pkl
models/c_models/models/: README.md  main.py
models/c_models/models/trained_models/: model_reddit_count_20250930_094042.pkl  model_twitter_count_20250930_094042.pkl
models/elasticnet_regression/: model.py
models/j_models/elasticnet_regression/: README.md  johns_model.joblib  model.py  pyproject.toml
models/j_models/lasso_regression/: model.py  pyproject.toml
models/j_models/loader/: pyproject.toml
models/j_models/loader/data/: local_copy.csv
models/j_models/ridge_regression/: pyproject.toml
models/j_models/ridge_regression/data/: local_copy.csv
models/lasso_regression/: model.py
models/loader/: load_data.py
models/ridge_regression/: model.py  pyproject.toml
nasa_pipeline/: Dockerfile  cloudbuild.yaml  main.py  pyproject.toml
twitter_api/: twitter_api.py
