[project]
name = "de-project-group"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "google-cloud-storage>=3.3.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "tweepy>=4.16.0",
]


[tool.ruff]
line-length = 88  # Match Black default
target-version = "py311"

# Enable/disable rules
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # You might ignore long lines if you use Black

# Enable auto-fix on certain rules
fixable = ["ALL"]
unfixable = []
