[project]
name = "de-project-group"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.0.0",
    "google-cloud-storage>=2.10.0",
    "python-dotenv>=1.1.1"
]

[tool.ruff]
line-length = 88  # Match Black default
target-version = "py311"

[tool.ruff.lint]
# Enable/disable rules
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # You might ignore long lines if you use Black

# Enable auto-fix on certain rules
fixable = ["ALL"]
unfixable = []

[tool.uv.workspace]
members = [
    "fetchers/nasa_api",
    "fetchers/reddit_api",
    "fetchers/twitter_api",
    "frontend",
    "models/c_models",
    "models/c_models/data_loader",
    "models/c_models/model1",
    "models/c_models/inference",
    "frontend/flask_app",
]

