[project]
name = "frontend"
version = "0.1.0"
description = "Flask API for BigQuery data visualization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.3.0",
    "google-cloud-bigquery>=3.11.0",
    "google-auth>=2.23.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
    "db-dtypes>=1.4.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.13.2",
]