[project]
name = "inference"
version = "0.1.0"
description = "Model inference script for loading models from GCS and making predictions on BigQuery data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.3.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigquery>=3.11.0",
    "google-auth>=2.23.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "db-dtypes>=1.4.3",
    "ruff>=0.13.2",
]
