[project]
name = "model1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.4.3",
    "dotenv>=0.9.9",
    "google-cloud-bigquery>=3.38.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ruff>=0.13.2",
]
